<resources>
    <string name="app_name">Hamburger Home</string>
    <string name="logo_app">Logo App</string>
    <string name="email">Correo electronico</string>
    <string name="password">Introduce la contraseña</string>
    <string name="signin">Iniciar Sesion</string>
    <string name="title_fragment_menu">Burgers</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ACTIVITY PRODUCTS -->
    <string name="title_burger1_Products">Brutal Bacon Crispy</string>
    <string name="title_burger2_Products">Chicken Wrap</string>
    <string name="info_burger1_Products">Sabemos que te encanta el bacon, pero cocinarlo es un lio. Dejate de problemas con la nueva Brutal Bacon.</string>
    <string name="info_burger2_Products">¡La opción mas enrollada! Sabrosa tortilla rellena de crujiente de...</string>
    <string name="title_burger3_Products">King Chicken</string>
    <string name="info_burger3_Products">100% pechuga marinada, jugosa y crujiente, montada sobre un pan con masa madre, con cheddar...</string>
    <string name="title_burger4_Products">Whopper</string>
    <string name="info_burger4_Products">El Whopper® siempre será nuestro número uno. Jugosa carne de vacuno de...</string>
    <string name="title_burgers">Hamburguesas</string>
    <string name="description">descripcion</string>
    <string name="title_complements">Complementos</string>
    <string name="title_complemets1_Products">Ensalada Delight</string>
    <string name="title_complemets2_Products">Aros de Cebolla</string>
    <string name="title_complemets3_Products">Cubo de Alitas de pollo</string>
    <string name="title_complemets4_Products">Chicken nuggets</string>
    <string name="title_complemets5_Products">Cubo de Patatas</string>
    <string name="title_complemets6_Products">Tequeños</string>
    <string name="info_complements1">Si la lechuga no te parece suficiente, esta ensalada contiene todo lo necesario...</string>
    <string name="info_complements2">Puedes pedirlos como entrante o guarnicion, para compartir o para ti solo, son perfectos para todo...</string>
    <string name="info_complements3">Quedarte con los pies en el suelo no será posible cuandos pidas nuestro nuevo cubo de 12 alitas, ...</string>
    <string name="info_complements4">Nuevos deliciosos, crujientes, dorados... dipealos en su sabrosa salsa...</string>
    <string name="info_complements5">Unas patatas siempre están bien. Pero un cubo repleto de patatas es otro rollo. Vamos, acompaña tu Cubo de...</string>
    <string name="info_complements6">El snack que no podía faltar en Burger King. Con esta masa crujiente...</string>
    <string name="ir_carrito">Ir al carrito</string>
    <string name="title_desserts">Postres</string>
    <string name="title_dessert1_Products">King Fusion El Almendro</string>
    <string name="info_dessert1_Products">Que gustito volver a casa por navidad, con solo un sabor. La version de un clasico helado...</string>
    <string name="title_dessert2_Products">Oreo Shake</string>
    <string name="info_dessert2_Products">Delicioso shake con chocolate con nuestro riquisimo helado más trozos de OREO."</string>
    <string name="title_dessert3_Products">Tarta de Oreo</string>
    <string name="info_dessert3_Products">Con Oreo todo esta mas bueno, incluidas las tartas. Hazle hueco al postre y disfruta de la tarta mas top.</string>
</resources>