<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DessertsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:text="@string/title_desserts"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_dessert1"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:contentDescription="@string/description"
                    android:id="@+id/image_dessert1"
                    android:layout_width="150sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/king_fusion" />

                <TextView
                    android:id="@+id/title_dessert1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_dessert1_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_dessert1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_dessert1_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_dessert2"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_dessert2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/oreo_shake"
                    android:contentDescription="@string/description"/>

                <TextView
                    android:id="@+id/title_dessert2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_dessert2_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_dessert2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/info_dessert2_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_dessert3"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_dessert3"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/tarta_oreo"
                    android:contentDescription="@string/description" />

                <TextView
                    android:id="@+id/title_dessert3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_dessert3_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_dessert3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/info_dessert3_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/GoToCartDesserts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ir_carrito"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>