<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ComplementsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/title_complements"
                android:textColor="@color/black"
                android:textSize="55sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements1"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements1"
                    android:layout_width="150sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/ensalada" />

                <TextView
                    android:id="@+id/title_complements1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets1_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_complements1"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements2"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/aros_cebolla" />

                <TextView
                    android:id="@+id/title_complements2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets2_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/info_complements2"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements3"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements3"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/cubo_alitas" />

                <TextView
                    android:id="@+id/title_complements3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets3_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_complements3"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements4"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements4"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/chicken_nuggets" />

                <TextView
                    android:id="@+id/title_complements4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets4_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_complements4"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements5"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements5"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/cubo_patatas" />

                <TextView
                    android:id="@+id/title_complements5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets5_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_complements5"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_complements6"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_complements6"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:contentDescription="@string/description"
                    android:src="@drawable/tequenos" />

                <TextView
                    android:id="@+id/title_complements6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_complemets6_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_complements6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_complements6"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>