<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BurgerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:text="@string/title_burgers"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_burger1"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:contentDescription="@string/description"
                    android:id="@+id/image_burger1"
                    android:layout_width="150sp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/brutar_bacon_crispy" />

                <TextView
                    android:id="@+id/title_burger1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_burger1_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_burger1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_burger1_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_burger2"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_burger2"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/chicken_wrap"
                    android:contentDescription="@string/description"/>

                <TextView
                    android:id="@+id/title_burger2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_burger2_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_burger2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_burger2_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_burger3"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_burger3"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/king_chicken"
                    android:contentDescription="@string/description" />

                <TextView
                    android:id="@+id/title_burger3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167dp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_burger3_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_burger3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/info_burger3_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView_burger4"
                android:layout_width="@dimen/cardview_width"
                android:layout_height="@dimen/cardview_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/fondo_azul_cardview"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/image_burger4"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/RojoOscuroLogo"
                    android:src="@drawable/whopper"
                    android:contentDescription="@string/description"/>

                <TextView
                    android:id="@+id/title_burger4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="-40dp"
                    android:text="@string/title_burger4_Products"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_burger4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="167sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/info_burger4_Products"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>